# cusp

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: dataset_candidate.yml
.github/workflows/: docs.yml
cusp/: Unique_Points_Not_in_combined_org.csv  aggregate.py  build.py  citations.py  combine_data.py  data_utils.py  export.py  generate_process_script_metadata.py  generate_source_quality_metadata.py  process_script_metadata.py  release_gate.py  source_quality_metadata.py  source_quality_metadata_cli.py
cusp/features/: __init__.py  __main__.py  gee.py  io.py  models.py  registry.py  sampler.py
cusp/qc/: __init__.py  __main__.py  aggregate.py  checks.py  cli.py  io.py  reporting.py
data/: cusp_sources.bib  cusp_sources_bibtex.csv  quality_flag_definitions.csv  source_duplication_notes.csv  source_quality_flags.csv
data/Bakian_Dogaheh_2020/: Bakian-Dogaheh2020alt.csv  process_bakian_dogaheh_2020.py  processed_bakian_dogaheh_2020.csv
data/Barrow_CALM_U1/: process_barrow_calm_u1.py  processed_barrow_calm_u1.csv
data/Beer_etal_2013/: Beer_2013_link-to-files.tab  process_beer_etal_2013.py  processed_beer_etal_2013.csv  yakustk_active_layer_depth_map.nc
data/Bonaventure_Whati/: groundTruthLocs.csv  process_bonaventure_whati.py  processed_bonaventure_whati.csv
docs/: index.md
tests/: test_aggregate.py  test_build.py  test_citations.py  test_export.py  test_features.py  test_process_script_metadata.py  test_qc_aggregated.py  test_qc_cli.py  test_qc_combined.py  test_qc_observations.py
(+505 files in other folders)
